--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "store",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -43,7 +44,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "serverless": "^2.29.0",
-    "serverless-finch": "^2.6.0",
+    "serverless-finch": "^2.8.0",
     "typescript": "~4.3.5",
     "yup": "^0.29.1"
   },
@@ -51,7 +52,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0"
+    "@types/jest": "^24.0.0",
+    "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin"
   },
   "eslintConfig": {
     "extends": "react-app"
